# curlev

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  version.hpp.in
.github/workflows/: clang-tidy.yml  coverage.yml  cppcheck.yml  flawfinder.yml  valgrind.yml
docs/: architecture.md  internals.md  reference_manual.md
include/: async.hpp  authentication.hpp  certificates.hpp  common.hpp  http.hpp  mime.hpp  options.hpp  smtp.hpp  wrapper.hpp
include/utils/: assert_return.hpp  curl_utils.hpp  map_utils.hpp  non_transferable.hpp  string_utils.hpp
src/: CMakeLists.txt  async.cpp  authentication.cpp  certificates.cpp  common.cpp  http.cpp  http_json.cpp  mime.cpp  options.cpp  smtp.cpp
src/utils/: curl_utils.cpp  map_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_1.cpp  test_1_b.cpp  test_1_common.cpp  test_1_http_advanced.cpp  test_1_http_basic.cpp  test_1_http_complex.cpp  test_1_smtp.cpp  test_2.cpp  test_main.cpp  test_utils.cpp  test_utils.hpp
